fonts and spacing corrections

--- a/src/assets/sass/_responsive.scss
+++ b/src/assets/sass/_responsive.scss
@@ -10,6 +10,321 @@
     }
 }
 
+@media (max-width: 1600px) {
+    .aboutContent {
+        padding-top: 130px;
+
+        h1 {
+            font-size: 40px;
+            line-height: 40px;
+        }
+
+        p {
+            font-size: 17px;
+            line-height: 24px;
+        }
+    }
+
+    .milestoneMain {
+        h2 {
+            font-size: 40px;
+            line-height: 40px;
+        }
+
+    }
+
+    .nftContent {
+
+        h1 {
+            font-size: 40px;
+            line-height: 40px;
+
+        }
+
+        p {
+            font-size: 17px;
+            line-height: 24px;
+        }
+
+        h2 {
+            font-size: 23px;
+            line-height: 23px;
+        }
+
+        h3 {
+            font-size: 22px;
+            line-height: 22px;
+        }
+
+
+    }
+
+    .nftintro {
+
+
+        &__text {
+            h2 {
+                font-size: 40px;
+                line-height: 40px;
+                margin-bottom: 0;
+            }
+
+            p {
+                font-size: 17px;
+                line-height: 24px;
+            }
+        }
+    }
+
+    .nftContent__reward {
+        margin: 20px 0;
+    }
+
+    .nftContent__box {
+        margin-bottom: 20px;
+    }
+
+    .nftContent__box ul {
+        margin-top: 5px;
+    }
+
+    .nftContent__box ul li {
+        font-size: 17px;
+        line-height: 1px;
+    }
+
+    .nftContent__box p {
+        margin-bottom: 15px;
+    }
+
+    .nftintro__attribute__header h4 {
+        font-size: 18px;
+    }
+
+    .nftintro__attribute__box {
+        padding: 10px;
+    }
+
+    .form-label {
+        font-size: 13px;
+        margin-bottom: 0;
+    }
+
+    .form-select,
+    .form-control {
+        padding: 5px 8px;
+        font-size: 15px;
+    }
+
+    .nftintro__attribute__box p {
+        font-size: 15px;
+        margin-top: 6px;
+    }
+
+    .input-group-text {
+        top: 43px;
+        left: 9px;
+    }
+
+    .nftintro__attribute__box #serialnumber {
+        padding-left: 29px;
+    }
+
+    .nftintro__attribute__box .btn.btn-secondary {
+        font-size: 16px;
+        line-height: 1;
+        padding: 6px 13px;
+        margin-top: 10px;
+    }
+
+    .nftintro__attribute__header__locker {
+        font-size: 14px;
+        line-height: 1;
+    }
+
+    .resetFIlter {
+        font-size: 14px;
+        line-height: 30px;
+    }
+
+    .dropMain .slick-arrow {
+        width: 50px;
+        height: 50px;
+
+        svg {
+            width: 30px;
+            height: 30px;
+        }
+    }
+
+    .attributeSlider .connectWNavs .nav-item .nav-link sup {
+        font-size: 15px;
+    }
+
+    .attributeSlider .connectWNavs .nav-item .nav-link {
+        font-size: 20px;
+        padding: 2px 7px;
+    }
+
+    .overallStat h3 {
+        font-size: 22px;
+        line-height: 1;
+        margin-bottom: 0;
+    }
+
+    .navbar.navbarchildstyle {
+        padding-top: 0px;
+    }
+
+    .backLink {
+        font-size: 25px;
+        line-height: 25px;
+
+        i {
+            margin-right: 5px;
+            font-size: 35px;
+        }
+    }
+
+    .nftsub {
+        padding-top: 45px;
+    }
+
+    .nftdrop__serial__supplyleft {
+        margin-left: 20px;
+        padding-top: 10px;
+    }
+
+    .nftdrop__serial__supplyleft p {
+        font-size: 18px;
+        line-height: 1;
+    }
+
+    .nftdrop__searchserial p {
+        font-size: 15px;
+    }
+
+    .nftdrop__searchserial #searchSerialnbr {
+        padding-left: 30px;
+    }
+
+    .nftType__carousel {
+        margin-top: 0;
+    }
+
+    .nftType__carousel .showonlyavailable .form-check .form-check-label {
+        font-size: 18px;
+    }
+
+    .nftType__carousel__slide span {
+        font-size: 18px;
+        line-height: 1;
+    }
+
+
+    .nftType__carousel__slide p {
+        font-size: 18px;
+        line-height: 1;
+    }
+
+    .nftType__carousel__slide h6 {
+        font-size: 17px;
+        line-height: 42px;
+        margin-top: -6px;
+    }
+
+    .overallStat__box {
+        padding: 18px 17px 18px;
+    }
+
+    .overallStat__box__stat h5 {
+        font-size: 25px;
+        line-height: 42px;
+    }
+
+    .btn.btn-secondary {
+        font-size: 19px;
+        line-height: 29px;
+    }
+
+    .nftmember__header {
+        .btn.btn-secondary {
+            padding: 0.375rem 0.75rem;
+        }
+    }
+
+    .disconn {
+        font-size: 18px;
+    }
+
+    .nftmember {
+        padding-top: 50px;
+    }
+
+    .nftBox p {
+        font-size: 20px;
+        line-height: 28px;
+    }
+
+    .connectWNavs .nav-item .nav-link {
+        font-size: 20px;
+    }
+    .connectWNavs {
+        margin-top: 33px;
+    }
+    .connectWNavs .nav-item .nav-link .walletIconc {
+        width: 47px;
+        height: 32px;
+        margin-right: 0;
+    }
+    .pasttranstable td {
+        font-size: 18px;
+        line-height: unset;
+        padding: 0.5rem 0.5rem;
+    }
+    .pasttransm {
+        padding: 34px 11px;
+    }
+    .mynftMain{
+        min-height: 655px;
+        height: auto;
+    }
+    .mynftBox {
+        padding-bottom: 0;
+    }
+    .mynftBox__header {
+        margin-bottom: 21px;
+        text-align: right;
+    }
+    .nftType__title h3 {
+        font-size: 23px;
+        line-height: 23px;
+    }
+    .nftType__title a {
+        font-size: 16px;
+        line-height: 20px;
+    }
+    .nftsale__instruction p {
+        font-size: 17px;
+        line-height: 17px;
+    }
+    .nftsub h1 {
+        font-size: 40px;
+        line-height: 40px;
+        margin-bottom: 23px;
+    }
+    .listticketholder table tbody td {
+        font-size: 18px;
+        line-height: 30px;
+        padding: 8px;
+    }
+    .listticketholder table thead th {
+        font-size: 22px;
+        line-height: 22px;
+        padding: 8px;
+    }
+}
+
 @media (max-width: 1200px) {
     .feature__videowrap {
         height: 260px;
