--- a/src/assets/sass/base/_base.scss
+++ b/src/assets/sass/base/_base.scss
@@ -108,7 +108,7 @@ body {
     font-size     : 20px;
     font-family   : $fontMain;
     background    : #fff;
-    line-height   : 34px;
+    // line-height   : 34px;
     letter-spacing: normal;
     margin        : 0;
     overflow-y    : auto;
