--- a/src/assets/sass/base/_typography.scss
+++ b/src/assets/sass/base/_typography.scss
@@ -14,7 +14,7 @@ h6 {
 
 p {
     font-size: 19px;
-    line-height: 29px;
+    // line-height: 29px;
     color: #fff;
     font-weight: 300;
 }
