--- a/src/assets/sass/views/_about.scss
+++ b/src/assets/sass/views/_about.scss
@@ -27,8 +27,8 @@
     h2 {
         text-align: center;
         font-weight: 700;
-        font-size: 60px;
-        line-height: 60px;
+        font-size: 23px;
+        line-height: 23px;
         text-transform: uppercase;
         color: #6D7993;
     }
